--- a/styles/Category.css
+++ b/styles/Category.css
@@ -3,7 +3,7 @@
   align-items: center;
   padding: 12px 25px;
   gap: 20px;
-  border-bottom: 2px solid #E1E8ED;
+  border-bottom: 2px solid #b4b8bb;
   margin: 20px auto;
   background: #f5f5f5;
   border-radius: 12px;
