--- a/styles/ResumeTemplateList.css
+++ b/styles/ResumeTemplateList.css
@@ -54,20 +54,23 @@
 }
 
 /* Button styles */
+.continue-btn {background-image: linear-gradient(to right, #16A085 0%, #F4D03F  51%, #16A085  100%)}
 .continue-btn {
-  width: 100%;
-  padding: 14px;
-  background-color: #4CAF50;
-  color: white;
-  font-size: 1.2rem;
-  font-weight: 600;
-  border-radius: 8px;
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;            
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
   cursor: pointer;
-  transition: background-color 0.3s ease;
 }
 
 .continue-btn:hover {
-  background-color: #45a049;
+  background-position: right center;
 }
 
 /* Resume Template Section */
