--- a/styles/Header.css
+++ b/styles/Header.css
@@ -42,20 +42,48 @@
   display: none;
   background: transparent;
   border: none;
-  color: #fff;
+  color: black;
   font-size: 24px;
   cursor: pointer;
+}
+
+.searchIcon {
+  cursor: pointer;
+  font-size: 20px;
+  color: black;
+  margin-left: 10px;
+}
+
+.msearchIcon {
+  display: none;
+  cursor: pointer;
+  font-size: 20px;
+  color: black;
+  margin-left: 10px;
 }
 
 .mobileNav {
   display: none;
   flex-direction: column;
   position: absolute;
-  background: #007bff;
+  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
   width: 100%;
   top: 60px;
   left: 0;
   padding: 10px 0;
+  text-align: center;
+  justify-content: center;
+}
+
+.mobcombinedButton {
+  background: #f0a500;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  margin-left: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s ease;
 }
 
 .combinedButton {
@@ -79,7 +107,6 @@
   top: 60px; /* Just below the header */
   left: 0;
   right: 0;
-  /*background-color: rgba(0, 0, 0, 0.5);*/
   z-index: 1000; /* Ensure it's on top of the content */
   display: flex;
   justify-content: center;
@@ -112,6 +139,11 @@
     display: block;
   }
 
+  .msearchIcon {
+    display: block; /* Ensure the search icon is visible on mobile */
+    margin-left: 10px; /* Adjust as needed */
+  }
+
   .mobileNav {
     display: flex;
   }
@@ -123,5 +155,10 @@
   /* Adjust search input for mobile */
   .search-bar-overlay .search-input {
     width: 80%;
+  }
+
+  /* Adjust icon alignment for mobile */
+  .navLink {
+    margin: 10px 0;
   }
 }
