fix ui issue for mobile

--- a/styles/TemplateHomeView.css
+++ b/styles/TemplateHomeView.css
@@ -118,3 +118,18 @@ body {
   width: 33%;
   background: linear-gradient(to left, rgba(255, 255, 255, 0.95), transparent);
 }
+@media only screen and (max-width:786px){
+  .content-section h2 {
+    display : inline-block;
+    width: 100%;
+  }
+  .content-section {
+    width: 100%;
+    max-width: 800px;
+    padding:0
+  }
+  .image-section {
+    display:none;
+  }
+
+}
